<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_manage_call"
        android:orderInCategory="100"
        android:title="@string/menu_manage_call"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_all"
        android:orderInCategory="100"
        android:title="@string/menu_show_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_account"
        android:orderInCategory="100"
        android:title="@string/menu_my_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_assign_task"
        android:orderInCategory="100"
        android:title="@string/menu_assign_task"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_employee_detail"
        android:orderInCategory="100"
        android:title="@string/menu_employee_detail"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_employee_task"
        android:orderInCategory="100"
        android:title="@string/menu_employee_task"
        app:showAsAction="never" />
</menu>